# janeaustenstoryteller

./: README.md  README_SIMPLIFIED.md  audio_manager.py  austen_experience.py  austen_experience_advanced.py  austen_quotes.py  austen_quotes_demo.py  austen_storyteller.py  austen_visual_demo.py  character_generator.py  custom_storyboard_viewer.py  custom_theme_storyteller.py  displayimages.py  enhanced_austen_storyteller.py  enhanced_story_templates.py  jane_austen_storyteller.py  kivy_visual_imagery.py  letter_writing_assistant.py  pyproject.toml  regency_name_dictionary.py  regency_text_animations.py  run_kivy_demo.py  simplified_storyteller.py  story_templates.py  text_animations_demo.py  text_only_experience.py  timeline_generator.py  utils.py  visual_imagery.py  visual_imagery_kivy.py
