[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "gtts>=2.5.4",
    "kivy>=2.3.1",
    "openai>=1.76.0",
    "pyaudio>=0.2.14",
    "pygame>=2.6.1",
    "speechrecognition>=3.14.2",
    "trafilatura>=2.0.0",
]
